# python-build-standalone

./: .gitignore  CONTRIBUTING.rst  Cargo.toml  Justfile  LICENSE  LICENSE.bdb.txt  LICENSE.cpython.txt  LICENSE.gdbm.txt  LICENSE.libX11.txt  LICENSE.libedit.txt  LICENSE.liblzma.txt  LICENSE.libressl.txt  LICENSE.libuuid.txt  LICENSE.mpdecimal.txt  LICENSE.ncurses.txt  LICENSE.sqlite.txt  LICENSE.tix.txt  LICENSE.zlib.txt  README.rst  build-linux.py  build-macos.py  build-windows.py  check.py  ci-matrix.py  ci-targets.yaml  downloads.yml  latest-release.json  mypy.ini  prune-distribution.py  python-licenses.rst  release-linux.sh  release-macos.sh  release-windows.bat  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  requirements.txt.in  requirements.win.txt  ruff.toml  (+1 more)
cpython-linux/: Makefile  README.rst  build-bdb.sh  build-binutils.sh  build-bzip2.sh  build-clang.sh  build-cpython.sh  build-gcc.sh  build-gdbm.sh  build-inputproto.sh  build-libX11.sh  build-libXau.sh  build-libedit.sh  build-libffi.sh  build-libpthread-stubs.sh  build-libressl.sh  build-libxcb.sh  build-musl.sh  build-ncurses.sh  build-openssl.sh  build-readline.sh  build-sqlite.sh  build-tcl.sh  build-tcltk.sh  build-tk.sh  build-uuid.sh  build-xcb-proto.sh  build-xextproto.sh  build-xz.sh  build-zlib.sh  build.Dockerfile  build.py  gcc.Dockerfile  static-modules  xcb.Dockerfile
cpython-macos/: Makefile  build-bdb.sh  build-bzip2.sh  build-clang.sh  build-cpython.sh  build-libedit.sh  build-libffi.sh  build-ncurses.sh  build-openssl.sh  build-sqlite.sh  build-uuid.sh  build-xz.sh  build-zlib.sh  build.py  static-modules
cpython-unix/: Makefile  base.Dockerfile  build-autoconf.sh  build-bdb.sh  build-binutils.sh  build-bzip2.sh  build-clang-linux64.sh  build-clang-macos.sh  build-clang.sh  build-cpython-host.sh  build-cpython.sh  build-expat.sh  build-gcc.sh  build-gdbm.sh  build-gettext.sh  build-inputproto.sh  build-kbproto.sh  build-libX11.sh  build-libXau.sh  build-libedit.sh  build-libffi-3.3.sh  build-libffi.sh  build-libpthread-stubs.sh  build-libressl.sh  build-libxcb.sh  build-m4.sh  build-main.py  build-mpdecimal.sh  build-musl.sh  build-ncurses.sh  build-openssl-1.1.sh  build-openssl-3.0.sh  build-openssl.sh  build-patchelf.sh  build-readline.sh  build-sqlite.sh  build-tcl.sh  build-tix.sh  build-tk.sh  build-uuid.sh  (+102 more)
cpython-windows/: build.py  generate_metadata.py  run_tests-13.py
docs/: building.rst  conf.py  distributions.rst  index.rst  quirks.rst  running.rst  status.rst  technotes.rst
(+21 files in other folders)
