[package]
name = "pythonbuild"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
apple-sdk = "0.5.1"
bytes = "1.5.0"
clap = "4.4.7"
duct = "0.13.6"
flate2 = "1.0.28"
futures = "0.3.29"
goblin = "0.7.1"
hex = "0.4.3"
object = "0.32.1"
octocrab = { version = "0.19.0", features = ["rustls"] }
once_cell = "1.18.0"
rayon = "1.8.0"
reqwest = {version = "0.11.22", features = ["rustls"] }
scroll = "0.11.0"
semver = "1.0.20"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
sha2 = "0.10.8"
tar = "0.4.40"
tempfile = "3.8.1"
text-stub-library = "0.9.0"
tokio = "1.33.0"
url = "2.4.1"
version-compare = "0.1.1"
zip = "0.6.6"
zstd = "0.13.0"
