[package]
name = "pythonbuild"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
apple-sdk = "0.5.2"
bytes = "1.5.0"
clap = "4.4.13"
duct = "0.13.7"
flate2 = "1.0.28"
futures = "0.3.30"
goblin = "0.8.0"
hex = "0.4.3"
object = "0.32.2"
octocrab = { version = "0.19.0", features = ["rustls"] }
once_cell = "1.19.0"
rayon = "1.8.0"
reqwest = {version = "0.11.23", features = ["rustls"] }
scroll = "0.12.0"
semver = "1.0.21"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
sha2 = "0.10.8"
tar = "0.4.40"
tempfile = "3.9.0"
text-stub-library = "0.9.0"
tokio = "1.35.1"
url = "2.5.0"
version-compare = "0.1.1"
zip = "0.6.6"
zstd = "0.13.0"
