[package]
name = "pythonbuild"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.80"
apple-sdk = "0.5.2"
bytes = "1.5.0"
clap = "4.5.1"
duct = "0.13.7"
flate2 = "1.0.28"
futures = "0.3.30"
goblin = "0.8.0"
hex = "0.4.3"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["client"] }
hyper-util = { version = "0.1.3" }
normalize-path = "0.2.1"
object = "0.32.2"
octocrab = { version = "0.34.1", features = ["rustls", "stream"] }
once_cell = "1.19.0"
pdb = "0.8.0"
rayon = "1.8.1"
reqwest = { version = "0.11.24", features = ["rustls", "stream"] }
scroll = "0.12.0"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
tar = "0.4.40"
tempfile = "3.10.0"
text-stub-library = "0.9.0"
tokio = "1.36.0"
url = "2.5.0"
version-compare = "0.1.1"
zip = "0.6.6"
zstd = "0.13.0"
